did task and client side

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -126,5 +126,142 @@
   },
   "paymentMethods": {
     "title": "شاشة طرق الدفع"
+  },
+  "tabs": {
+  "explore": "استكشاف",
+  "myTasks": "مهامي",
+  "messages": "الرسائل",
+  "notifications": "الإشعارات",
+  "profile": "الملف الشخصي"
+},
+"explore": {
+  "header": "استكشاف المهام",
+  "location": "الموقع",
+  "price": "السعر",
+  "bids": "عدد العروض",
+  "viewDetails": "عرض التفاصيل",
+  "noTasks": "لا توجد مهام حالياً."
+},
+"details": {
+  "location": "الموقع",
+  "price": "السعر المعروض",
+  "enterBid": "أدخل عرضك",
+  "bidAmount": "قيمة العرض (ريال)",
+  "bidMessage": "رسالة إلى العميل (150 حرف كحد أقصى)",
+  "submitBid": "إرسال العرض",
+  "errorTitle": "بيانات ناقصة",
+  "fillFields": "يرجى إدخال المبلغ والرسالة.",
+  "successTitle": "تم",
+  "bidSent": "تم إرسال العرض بنجاح!"
+},
+"tasker": {
+  "active": "نشطة",
+  "past": "سابقة",
+  "noTasks": "لا توجد مهام لعرضها.",
+  "client": "العميل",
+  "status": "الحالة",
+  "statusTypes": {
+    "started": "قيد التنفيذ",
+    "completed": "مكتملة"
+  },
+  "chat": "محادثة",
+  "report": "إبلاغ",
+  "cancel": "إلغاء المهمة"
+},
+"chatt": {
+  "title": "المحادثة",
+  "placeholder": "اكتب رسالة...",
+  "reported": "تم الإبلاغ عن العميل بنجاح"
+},
+"notify": {
+  "title": "الإشعارات",
+  "empty": "لا توجد إشعارات حالياً.",
+  "types": {
+    "hired": "تم التوظيف",
+    "message": "رسالة جديدة"
   }
+},
+"profilee": {
+  "edit": "تعديل الملف الشخصي",
+  "documents": "المستندات",
+  "bank": "الحساب البنكي",
+  "payments": "مدفوعاتي",
+  "reviews": "تقييماتي",
+  "settings": "الإعدادات",
+  "logout": "تسجيل الخروج",
+  "loggedOut": "تم تسجيل الخروج بنجاح."
+},
+"editProfilee": {
+  "title": "تعديل الملف الشخصي",
+  "name": "الاسم الكامل",
+  "email": "البريد الإلكتروني (غير قابل للتعديل)",
+  "gender": "الجنس",
+  "location": "الموقع",
+  "experience": "الخبرة",
+  "skills": "المهارات (بحد أقصى 10)",
+  "about": "نبذة عنك (150 حرف كحد أقصى)",
+  "save": "حفظ التغييرات",
+  "savedTitle": "تم التحديث",
+  "savedMessage": "تم حفظ التغييرات بنجاح."
+},
+"documents": {
+  "title": "المستندات المرفوعة",
+  "empty": "لا توجد مستندات مرفوعة بعد.",
+  "uploadBtn": "تحميل مستند",
+  "uploadedTitle": "تم التحميل",
+  "uploadedMessage": "تم تحميل المستند بنجاح."
+},
+"bank": {
+  "title": "الحساب البنكي",
+  "bankName": "اسم البنك",
+  "accountNumber": "رقم الحساب",
+  "iban": "رقم الآيبان",
+  "save": "حفظ التغييرات",
+  "savedTitle": "تم الحفظ",
+  "savedMessage": "تم حفظ تفاصيل الحساب البنكي."
+},
+"payments": {
+  "title": "مدفوعاتي",
+  "all": "الكل",
+  "recent": "الأخيرة",
+  "empty": "لا توجد سجلات مدفوعات."
+},
+"reviews": {
+  "title": "تقييماتي",
+  "average": "متوسط التقييم",
+  "empty": "لم تتلق أي تقييمات بعد."
+},
+"settings": {
+  "title": "الإعدادات",
+  "about": "معلومات عنا",
+  "privacy": "سياسة الخصوصية",
+  "terms": "الشروط والأحكام",
+  "faq": "الأسئلة الشائعة",
+  "contact": "التواصل مع الإدارة",
+  "logout": "تسجيل الخروج",
+  "logoutMsg": "تم تسجيل الخروج.",
+  "open": "فتح"
+},
+"chooseRole": "المتابعة كـ...",
+"role": {
+  "client": "عميل",
+  "tasker": "مُنفّذ"
+},
+"messagess": {
+  "title": "الرسائل"
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
