--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -1,7 +1,7 @@
 {
   "welcome": "مرحبًا بك في TASK",
   "login": {
-    "welcomeBack": "مرحبًا بعودتك 👋",
+    "welcomeBack": "مرحبًا بعودتك ",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
     "forgotPassword": "هل نسيت كلمة المرور؟",
@@ -10,7 +10,7 @@
     "registerLink": "سجّل الآن"
   },
   "register": {
-    "title": "إنشاء حساب 📝",
+    "title": "إنشاء حساب ",
     "fullName": "الاسم الكامل",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
@@ -19,43 +19,133 @@
     "alreadyHave": "هل لديك حساب؟",
     "loginLink": "تسجيل الدخول"
   },
-  "home": {
-    "greeting": "مرحبًا، {{name}} 👋",
-    "subtitle": "إليك ما يحدث اليوم",
-    "postTaskBtn": "إنشاء مهمة جديدة",
+  "TaskBottomNav": {
+  "explore": "استكشاف",
+  "myTasks": "مهامي",
+  "messages": "الرسائل",
+  "notifications": "الإشعارات",
+  "profile": "الملف الشخصي"
+},
+
+
+
+
+
+
+
+
+
+
+
+    "clientChangePassword": {
+      "title": "تغيير كلمة المرور",
+      "old": "كلمة المرور القديمة",
+      "new": "كلمة المرور الجديدة",
+      "confirm": "تأكيد كلمة المرور الجديدة",
+      "submit": "تحديث كلمة المرور",
+      "updated": "تم تحديث كلمة المرور بنجاح"
+    },
+
+    "clientChat": {
+      "chatWith": "الدردشة مع {{name}}",
+      "placeholder": "اكتب رسالة...",
+      "typing": "{{name}} يكتب...",
+      "mock1": "مرحبًا، رأيت مهمتك وأنا مهتم.",
+      "mock2": "رائع! متى تكون متاحًا؟"
+    },
+    "clientEditProfile": {
+      "title": "تعديل الملف الشخصي",
+      "name": "الاسم الكامل",
+      "gender": "الجنس",
+      "location": "الموقع",
+      "experience": "الخبرة",
+      "skills": "المهارات",
+      "about": "نبذة (150 حرفًا كحد أقصى)",
+      "save": "حفظ التغييرات",
+      "updated": "تم تحديث الملف الشخصي بنجاح"
+    },
+    "clientEditTask": {
+    "heading": "تعديل المهمة",
+    "titlePlaceholder": "أدخل عنوان المهمة (15 حرفًا كحد أقصى)",
+    "descriptionPlaceholder": "وصف المهمة (150 حرفًا كحد أقصى)",
+    "pricePlaceholder": "أدخل ميزانيتك",
+    "save": "حفظ التغييرات",
+    "missingTitle": "غير مكتمل",
+    "missingFields": "يرجى ملء جميع الحقول للمتابعة.",
+    "updatedTitle": "تم تحديث المهمة",
+    "updatedMessage": "تم تحديث المهمة بنجاح."
+  },
+  "clientHome": {
+    "greeting": "مرحبًا، {{name}}!",
+    "defaultName": "زائر",
+    "subtitle": "مرحبًا بعودتك، إليك آخر الأنشطة.",
+    "postTaskBtn": "نشر مهمة",
     "yourTasks": "مهامك",
+    "noTasks": "لم تقم بنشر أي مهام بعد.",
     "status": {
       "pending": "قيد الانتظار",
-      "started": "قيد التنفيذ"
-    },
-    "noTasks": "ليس لديك أي مهام بعد."
+      "started": "قيد التنفيذ",
+      "completed": "مكتملة"
+    }
   },
-  "post": {
-    "title": "إنشاء مهمة",
-    "taskTitlePlaceholder": "عنوان المهمة (15 حرف كحد أقصى)",
-    "taskDescPlaceholder": "وصف المهمة (150 حرف كحد أقصى)",
+  "clientMessages": {
+    "title": "الرسائل",
+    "placeholder": "لا توجد رسائل بعد."
+  },
+  "clientPayments": {
+    "title": "مدفوعاتي",
+    "total": "إجمالي المبلغ المستلم",
+    "date": "التاريخ",
+    "status": "الحالة",
+    "completed": "مكتمل",
+    "pending": "قيد الانتظار"
+  },
+  "clientMyTasks": {
+    "pending": "قيد الانتظار",
+    "started": "قيد التنفيذ",
+    "completed": "مكتملة",
+    "noTasks": "لا توجد مهام {{status}} حاليًا."
+  },
+  "clientNotifications": {
+    "title": "الإشعارات",
+    "none": "ليس لديك إشعارات.",
+    "taskHired": "تم توظيفك!",
+    "taskHiredDesc": "قام العميل بتوظيفك لمهمة.",
+    "newMessage": "تم استلام رسالة جديدة",
+    "newMessageDesc": "لديك رسالة جديدة في الدردشة.",
+    "paymentSent": "تم إرسال الدفعة",
+    "paymentSentDesc": "تمت معالجة دفعتك بنجاح."
+  },
+  "clientPaymentMethods": {
+    "title": "طرق الدفع",
+    "add": "إضافة بطاقة جديدة",
+    "default": "البطاقة الافتراضية"
+  },
+  "clientPostTask": {
+    "title": "نشر مهمة",
+    "taskTitlePlaceholder": "أدخل عنوان المهمة (15 حرفًا كحد أقصى)",
+    "taskDescPlaceholder": "صف مهمتك (150 حرفًا كحد أقصى)",
     "selectCategory": "اختر الفئة",
-    "enterAddress": "أدخل العنوان",
-    "budget": "الميزانية (ريال)",
-    "uploadImage": "تحميل صورة",
+    "enterAddress": "أدخل العنوان أو الموقع",
+    "budget": "أدخل ميزانيتك",
+    "uploadImage": "رفع صورة",
     "postBtn": "نشر المهمة",
     "cancel": "إلغاء",
-    "missingTitle": "بيانات ناقصة",
-    "fillAllFields": "يرجى ملء جميع الحقول.",
-    "successTitle": "تم بنجاح",
-    "successMessage": "تم نشر المهمة بنجاح!",
-    "limitTitle": "الحد الأقصى",
-    "limitMsg": "يمكنك تحميل 3 صور فقط.",
+    "limitTitle": "تم الوصول للحد الأقصى",
+    "limitMsg": "يمكنك تحميل 3 صور كحد أقصى.",
+    "missingTitle": "معلومات ناقصة",
+    "fillAllFields": "يرجى ملء جميع الحقول للمتابعة.",
+    "successTitle": "تم النشر",
+    "successMessage": "تم نشر المهمة بنجاح.",
     "categories": {
       "cleaning": "تنظيف",
       "moving": "نقل",
       "delivery": "توصيل",
-      "repairs": "صيانة",
+      "repairs": "تصليحات",
       "other": "أخرى"
     }
   },
-  "profile": {
-    "title": "الملف الشخصي",
+  "clientProfile": {
     "editProfile": "تعديل الملف الشخصي",
     "changePassword": "تغيير كلمة المرور",
     "myPayments": "مدفوعاتي",
@@ -67,21 +157,9 @@
     "contactAdmin": "اتصل بالإدارة",
     "logout": "تسجيل الخروج",
     "logoutAlertTitle": "تم تسجيل الخروج",
-    "logoutAlertMessage": "تم تسجيل خروجك."
+    "logoutAlertMessage": "تم تسجيل الخروج بنجاح."
   },
-  "mytasks": {
-    "pending": "قيد الانتظار",
-    "started": "قيد التنفيذ",
-    "completed": "مكتملة",
-    "noTasks": "لا توجد مهام في {{status}}"
-  },
-  "messages": {
-    "placeholder": "ستظهر رسائلك هنا."
-  },
-  "notifications": {
-    "none": "لا توجد إشعارات."
-  },
-  "taskDetails": {
+  "clientTaskDetails": {
     "description": "الوصف",
     "address": "العنوان",
     "offeredPrice": "السعر المعروض",
@@ -89,179 +167,138 @@
     "viewBids": "عرض العروض",
     "cancelTask": "إلغاء المهمة"
   },
-  "editTask": {
-    "heading": "تعديل المهمة",
-    "titlePlaceholder": "عنوان المهمة",
-    "descriptionPlaceholder": "الوصف",
-    "pricePlaceholder": "السعر (ر.س)",
-    "save": "حفظ التعديلات",
-    "missingTitle": "حقول مفقودة",
-    "missingFields": "يرجى تعبئة جميع الحقول.",
-    "updatedTitle": "تم التحديث",
-    "updatedMessage": "تم تحديث المهمة بنجاح."
-  },
-  "viewBids": {
-    "title": "عرض العروض",
-    "noBids": "لا توجد عروض حتى الآن.",
+  "clientViewBids": {
+    "title": "العروض المستلمة",
+    "chat": "محادثة",
     "accept": "قبول",
-    "chat": "مراسلة",
+    "noBids": "لم يتم استلام أي عروض بعد.",
     "acceptedTitle": "تم قبول العرض",
     "acceptedMessage": "لقد قبلت عرض {{name}}."
   },
-  "chat": {
-    "chatWith": "محادثة مع {{name}}",
-    "placeholder": "اكتب رسالة",
-    "typing": "{{name}} يكتب الآن...",
-    "mock1": "مرحبًا، رأيت مهمتك!",
-    "mock2": "شكرًا! متى يمكنك البدء؟"
+
+
+
+
+
+
+
+
+
+
+
+
+  "taskerBankAccount": {
+    "title": "الحساب البنكي",
+    "bankName": "اسم البنك",
+    "accountNumber": "رقم الحساب",
+    "iban": "رقم الآيبان",
+    "save": "حفظ التغييرات",
+    "savedTitle": "تم الحفظ",
+    "savedMessage": "تم حفظ تفاصيل الحساب البنكي بنجاح."
   },
-  "editProfile": {
-    "title": "شاشة تعديل الملف الشخصي"
+  "taskerChat": {
+    "title": "المحادثة",
+    "placeholder": "اكتب رسالة...",
+    "reported": "تم الإبلاغ عن هذا المستخدم."
   },
-  "changePassword": {
-    "title": "تغيير كلمة المرور"
+  "taskerDocuments": {
+    "title": "المستندات",
+    "uploadBtn": "رفع مستند",
+    "empty": "لم يتم رفع أي مستند بعد.",
+    "uploadedTitle": "تم الرفع",
+    "uploadedMessage": "تم رفع المستند بنجاح."
   },
-  "myPayments": {
-    "title": "شاشة المدفوعات الخاصة بي"
+  "taskerEditProfile": {
+    "title": "تعديل الملف الشخصي",
+    "name": "الاسم الكامل",
+    "email": "البريد الإلكتروني",
+    "gender": "الجنس",
+    "location": "الموقع",
+    "experience": "الخبرة",
+    "skills": "المهارات",
+    "about": "نبذة (150 حرفًا كحد أقصى)",
+    "save": "حفظ التغييرات",
+    "savedTitle": "تم التحديث",
+    "savedMessage": "تم تحديث الملف الشخصي بنجاح."
   },
-  "paymentMethods": {
-    "title": "شاشة طرق الدفع"
+  "taskerExplore": {
+    "header": "استكشاف المهام",
+    "location": "الموقع",
+    "price": "السعر",
+    "bids": "العروض",
+    "viewDetails": "عرض التفاصيل",
+    "noTasks": "لا توجد مهام متاحة حاليًا."
   },
-  "tabs": {
-  "explore": "استكشاف",
-  "myTasks": "مهامي",
-  "messages": "الرسائل",
-  "notifications": "الإشعارات",
-  "profile": "الملف الشخصي"
-},
-"explore": {
-  "header": "استكشاف المهام",
-  "location": "الموقع",
-  "price": "السعر",
-  "bids": "عدد العروض",
-  "viewDetails": "عرض التفاصيل",
-  "noTasks": "لا توجد مهام حالياً."
-},
-"details": {
-  "location": "الموقع",
-  "price": "السعر المعروض",
-  "enterBid": "أدخل عرضك",
-  "bidAmount": "قيمة العرض (ريال)",
-  "bidMessage": "رسالة إلى العميل (150 حرف كحد أقصى)",
-  "submitBid": "إرسال العرض",
-  "errorTitle": "بيانات ناقصة",
-  "fillFields": "يرجى إدخال المبلغ والرسالة.",
-  "successTitle": "تم",
-  "bidSent": "تم إرسال العرض بنجاح!"
-},
-"tasker": {
-  "active": "نشطة",
-  "past": "سابقة",
-  "noTasks": "لا توجد مهام لعرضها.",
-  "client": "العميل",
-  "status": "الحالة",
-  "statusTypes": {
-    "started": "قيد التنفيذ",
-    "completed": "مكتملة"
+  "taskerMessages": {
+    "title": "الرسائل"
   },
-  "chat": "محادثة",
-  "report": "إبلاغ",
-  "cancel": "إلغاء المهمة"
-},
-"chatt": {
-  "title": "المحادثة",
-  "placeholder": "اكتب رسالة...",
-  "reported": "تم الإبلاغ عن العميل بنجاح"
-},
-"notify": {
-  "title": "الإشعارات",
-  "empty": "لا توجد إشعارات حالياً.",
-  "types": {
-    "hired": "تم التوظيف",
-    "message": "رسالة جديدة"
-  }
-},
-"profilee": {
+  "taskerPayments": {
+    "title": "مدفوعاتي",
+    "all": "الكل",
+    "recent": "الأحدث",
+    "empty": "لا توجد مدفوعات."
+  },
+  "taskerReviews": {
+    "title": "تقييماتي",
+    "average": "متوسط التقييم",
+    "empty": "لم تستلم أي تقييمات بعد."
+  },
+  "taskerMyTasks": {
+    "active": "نشطة",
+    "past": "السابقة",
+    "noTasks": "لا توجد مهام حالياً.",
+    "client": "العميل",
+    "status": "الحالة",
+    "chat": "محادثة",
+    "report": "الإبلاغ",
+    "cancel": "إلغاء المهمة",
+    "statusTypes": {
+      "started": "قيد التنفيذ",
+      "completed": "مكتملة"
+    }
+  },
+  "taskerNotifications": {
+    "title": "الإشعارات",
+    "empty": "لا توجد إشعارات حالياً.",
+    "types": {
+      "hired": "تم توظيفك",
+      "message": "رسالة جديدة"
+    }
+  },
+  "taskerProfile": {
   "edit": "تعديل الملف الشخصي",
-  "documents": "المستندات",
+  "documents": "المستندات المرفوعة",
   "bank": "الحساب البنكي",
   "payments": "مدفوعاتي",
   "reviews": "تقييماتي",
   "settings": "الإعدادات",
   "logout": "تسجيل الخروج",
-  "loggedOut": "تم تسجيل الخروج بنجاح."
+  "loggedOut": "تم تسجيل الخروج."
 },
-"editProfilee": {
-  "title": "تعديل الملف الشخصي",
-  "name": "الاسم الكامل",
-  "email": "البريد الإلكتروني (غير قابل للتعديل)",
-  "gender": "الجنس",
-  "location": "الموقع",
-  "experience": "الخبرة",
-  "skills": "المهارات (بحد أقصى 10)",
-  "about": "نبذة عنك (150 حرف كحد أقصى)",
-  "save": "حفظ التغييرات",
-  "savedTitle": "تم التحديث",
-  "savedMessage": "تم حفظ التغييرات بنجاح."
-},
-"documents": {
-  "title": "المستندات المرفوعة",
-  "empty": "لا توجد مستندات مرفوعة بعد.",
-  "uploadBtn": "تحميل مستند",
-  "uploadedTitle": "تم التحميل",
-  "uploadedMessage": "تم تحميل المستند بنجاح."
-},
-"bank": {
-  "title": "الحساب البنكي",
-  "bankName": "اسم البنك",
-  "accountNumber": "رقم الحساب",
-  "iban": "رقم الآيبان",
-  "save": "حفظ التغييرات",
-  "savedTitle": "تم الحفظ",
-  "savedMessage": "تم حفظ تفاصيل الحساب البنكي."
-},
-"payments": {
-  "title": "مدفوعاتي",
-  "all": "الكل",
-  "recent": "الأخيرة",
-  "empty": "لا توجد سجلات مدفوعات."
-},
-"reviews": {
-  "title": "تقييماتي",
-  "average": "متوسط التقييم",
-  "empty": "لم تتلق أي تقييمات بعد."
-},
-"settings": {
+"taskerSettings": {
   "title": "الإعدادات",
+  "open": "جاري فتح",
   "about": "معلومات عنا",
   "privacy": "سياسة الخصوصية",
   "terms": "الشروط والأحكام",
   "faq": "الأسئلة الشائعة",
-  "contact": "التواصل مع الإدارة",
+  "contact": "الدعم الفني",
   "logout": "تسجيل الخروج",
-  "logoutMsg": "تم تسجيل الخروج.",
-  "open": "فتح"
+  "logoutMsg": "تم تسجيل خروجك بنجاح."
 },
-"chooseRole": "المتابعة كـ...",
-"role": {
-  "client": "عميل",
-  "tasker": "مُنفّذ"
-},
-"messagess": {
-  "title": "الرسائل"
+"taskerTaskDetails": {
+  "location": "الموقع",
+  "price": "السعر المعروض",
+  "enterBid": "أدخل عرضك",
+  "bidAmount": "عرضك (ر.س)",
+  "bidMessage": "أضف رسالة...",
+  "submitBid": "إرسال العرض",
+  "errorTitle": "معلومات ناقصة",
+  "fillFields": "يرجى إدخال العرض والرسالة.",
+  "successTitle": "تم الإرسال",
+  "bidSent": "تم إرسال عرضك بنجاح."
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  
+  
+  
 }
