--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -28,7 +28,9 @@
     "confirmPassword": "Confirm Password",
     "registerBtn": "Register",
     "alreadyHave": "Already have an account?",
-    "loginLink": "Login"
+    "loginLink": "Login",
+    "phone": "Phone Number"
+
   },
   "TaskBottomNav": {
   "explore": "Explore",
