new bids sent tab and dynamic bids count tasker side

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -275,7 +275,9 @@
     "statusTypes": {
       "started": "قيد التنفيذ",
       "completed": "مكتملة"
-    }
+    },
+    "bidSent": "العروض المرسلة"
+
   },
   "taskerNotifications": {
     "title": "الإشعارات",
