--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -268,7 +268,8 @@
     "statusTypes": {
       "started": "In Progress",
       "completed": "Completed"
-    }
+    },
+    "bidSent": "Bid Sent"
   },
   "taskerNotifications": {
     "title": "Notifications",
